[package]
name = "cargo-hold"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "numeric", "chrono"] }
diesel_migrations = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
futures = "0.3"

[dev-dependencies]
axum-test = "15.0"
mockito = "1.2"
tempfile = "3.8"
